add MEM config